--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -79,7 +79,7 @@
                             <div class="d-flex m-3 me-0">
                                 {% if request.user.is_authenticated %}
                                     <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                                    <a href="#" class="position-relative me-4 my-auto">
+                                    <a href="{% url "store:favorite_books" %}" class="position-relative me-4 my-auto">
                                         <i class="fa fa-shopping-bag fa-2x"></i>
                                         
                                     </a>
@@ -91,7 +91,7 @@
                                     </a>
                                     {% else %}
                                     <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                                    <a href="#" class="position-relative me-4 my-auto">
+                                    <a href="{% url "store:favorite_books" %}" class="position-relative me-4 my-auto">
                                         <i class="fa fa-shopping-bag fa-2x"></i>
                                         
                                     </a>
