--- a/store/templates/favorite_books.html
+++ b/store/templates/favorite_books.html
@@ -1,12 +1,12 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8">
         <title>MasomoGPT Website</title>
         {% load static %}
+        {% load crispy_forms_tags %}
+        {% load customfunction %}
+        {% csrf_token %}
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -14,34 +14,34 @@
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&display=swap" rel="stylesheet">
 
         <!-- Icon Font Stylesheet -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
         <link href="{% static 'lib/lightbox/css/lightbox.min.css'%}" rel="stylesheet">
         <link href="{% static 'lib/owlcarousel/assets/owl.carousel.min.css'%}" rel="stylesheet">
 
-
         <!-- Customized Bootstrap Stylesheet -->
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link  href="{% static 'css/style.css' %}" rel="stylesheet">
+        <link href="{% static 'css/style.css' %}" rel="stylesheet">
+
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
     </head>
 
     <body>
-
         <!-- Spinner Start -->
-        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
+        <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
         <!-- Spinner End -->
 
-
-        <!-- Navbar start -->
+        <!-- Navbar Start -->
         <div class="container-fluid fixed-top">
             <div class="container topbar bg-primary d-none d-lg-block">
                 <div class="d-flex justify-content-between">
@@ -58,7 +58,7 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6"><img src="{% static 'img/MasomoGPT_logo-nobg.png'%}" alt=""></h1></a>
+                <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6"><img src="{% static 'img/MasomoGPT_logo-nobg.png'%}" alt=""></h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -76,16 +76,13 @@
                                 
                             </a>
                             <a href="{% url 'store:signout' %}" class="my-auto">
-                                
                                 <i class="bi bi-arrow-right-square-fill" style="font-size: 2rem;"></i>
-                                
-                               
                             </a>
                             {% else %}
                             <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
                             <a href="{% url "store:favorite_books" %}" class="position-relative me-4 my-auto">
                                 <i class="fa fa-shopping-bag fa-2x"></i>
-
+                               
                             </a>
                             <a href="{% url 'store:signin' %}" class="my-auto">
                                 <i class="fas fa-user fa-2x"></i>
@@ -98,44 +95,55 @@
         </div>
         <!-- Navbar End -->
 
-
-        <div class="container-fluid py-5 mb-5 hero-header">
-			<div class="container">
-				<div class="row justify-content-md-center">
-					<div class="col-md-4 col-sm-3">
-						<div class="signin-form">
-							{% if messages %}
-							<div class="messages">
-								{% for message in messages %}
-								<p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
-								{% endfor %}
-							</div>
-							{% endif %}
-							<h3> Sign In</h3>	
-							<form action="" method="POST" class="auth-validate-form">
-								{% csrf_token %}
-								<div class="form-group">
-								<label>Username</label>
-								<input type="text" name="user" class="form-control">
-								</div>
-								<div class="form-group">
-								<label>Password</label>
-								<input type="password" name="pass" class="form-control">
-								</div>
-								<button type="submit" class="btn btn-primary">Login</button>
-							</form>
-							<a href="#">Forgot your password?</a>
-							<div class="a-divider-break"><h5>New to MASOMO GPT?</h5></div>
-							<a class="btn btn-default" href="{% url 'store:registration' %}">Create you MASOMO GPT account</a>
-						</div> 
-					</div>
-				</div>
-			</div>
+        <!-- Modal Search Start -->
+        <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-fullscreen">
+                <div class="modal-content rounded-0">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Search by keyword</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body d-flex align-items-center">
+                        <form class="input-group w-75 mx-auto d-flex" method="get" action="{% url 'store:search' %}">
+                            <input type="search" name="q" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
+                            <button type="submit" id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-
-			
-			
-
+        <!-- Modal Search End -->
+      
+        <div class="container-fluid py-5">
+            <div class="container py-5">
+                <h1 class="mb-4">Your Favorite Books</h1>
+                {% if favorites %}
+                    <ul class="list-group">
+                        {% for favorite in favorites %}
+                            <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <div class="col-sm-3">
+                                    <div class="grid-item">
+                                        <div class="view-details" style="cursor:pointer">
+                                            <img id="product_image" class="lookInsideImg" src="{{ favorite.book.coverpage.url }}" class="card-img-top" alt="{{ favorite.book.name }}" style="height: 150px; object-fit: cover;">
+                                            <div class="rating mt-2">
+                                                <span class="average-rating">{{ favorite.book.totalrating|averagerating:favorite.book.totalreview }}</span>
+                                                <a href='getreview' class="total-reviews"><span class='totalrating'>{{ favorite.book.totalreview|add:-1}}</span></a>                                
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <button class="btn btn-danger" onclick="removeFromFavorites({{ favorite.book.id }})">Remove from Favorites</button>
+                                
+                                
+                            </li>
+                        {% endfor %}
+                    </ul>
+                {% else %}
+                    <p>You have no favorite books. <a href="{% url 'store:books' %}">Browse books</a> to add to your favorites.</p>
+                {% endif %}
+            </div>
+        </div>
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
             <div class="container py-5">
@@ -222,7 +230,32 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>   
+        <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>  
+        <script>
+            function removeFromFavorites(bookId) {
+                fetch(`/remove_from_favorites/${bookId}/`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRFToken': '{{ csrf_token }}'
+                    }
+                })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.message);
+                    location.reload(); // Reload the page to update the favorite list
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                });
+            }
+
+
+            
+        </script> 
+
+        
+    
 
             
         <!-- JavaScript Libraries -->
@@ -236,9 +269,7 @@
         <!-- Template Javascript -->
         <script src="{% static 'js/main.js'%}"></script>
     </body>
-
 </html>
-  
+       
 
-    </body>
-</html>
+       
