--- a/store/templates/favorite_books.html
+++ b/store/templates/favorite_books.html
@@ -113,44 +113,42 @@
             </div>
         </div>
         <!-- Modal Search End -->
-      
         <div class="container-fluid py-5">
             <div class="container py-5">
                 <h1 class="mb-4">Your Favorite Books</h1>
                 {% if favorites %}
-                    <ul class="list-group">
+                   <div class="row">
                         {% for favorite in favorites %}
-                            <li class="list-group-item d-flex justify-content-between align-items-center">
-                                <div class="col-sm-3">
-                                    <div class="grid-item">
-                                        <div class="view-details" style="cursor:pointer">
-                                            <img id="product_image" class="lookInsideImg" src="{{ favorite.book.coverpage.url }}" class="card-img-top" alt="{{ favorite.book.name }}" style="height: 150px; object-fit: cover;">
-                                            <div class="rating mt-2">
-                                                <span class="average-rating">{{ favorite.book.totalrating|averagerating:favorite.book.totalreview }}</span>
-                                                <a href='getreview' class="total-reviews"><span class='totalrating'>{{ favorite.book.totalreview|add:-1}}</span></a>                                
-                                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+                                <div class="card" style="width: 12rem;">
+                                    <img src="{{ favorite.book.coverpage.url }}" class="card-img-top" alt="{{favorite.book.name }}" style="height: 150px; object-fit: cover;">
+                                    <div class="card-body">
+                                        <h6 class="card-title">{{ favorite.book.name }}</h6>
+                                        <p class="card-text">Price: sh{{ favorite.book.price }}</p>
+                                        <div class="rating mt-2">
+                                            <span class="average-rating">{{ favorite.book.totalrating|averagerating:favorite.book.totalreview }}</span>
+                                            <a href='getreview' class="total-reviews"><span class='totalrating'>{{ favorite.book.totalreview|add:-1}}</span></a>
                                         </div>
+                                        <br>
+                                        <a href="#" onclick="loadPDF('{{ favorite.book.bookpage.url }}')" class="btn btn-primary">Read Book</a>
+                                        <br><br>
+                                        <button class="btn btn-danger" onclick="removeFromFavorites({{ favorite.book.id }})">Remove from Favorites</button>                                
                                     </div>
-                                </div>
-                                <a href="#" onclick="loadPDF('{{ favorite.book.bookpage.url }}')" class="btn btn-primary">Read Book</a>
-                                <button class="btn btn-danger" onclick="removeFromFavorites({{ favorite.book.id }})">Remove from Favorites</button>
-                                
-                                
-                            </li>
+                                </div>                              
+                            </div>
                         {% endfor %}
-                    </ul>
+                        <div class="col-sm-12" id="pdfContainer">
+                            <div id="pdfViewer"></div>
+                        </div>
+                    </div>
                 {% else %}
                     <p>You have no favorite books. <a href="{% url 'store:books' %}">Browse books</a> to add to your favorites.</p>
                 {% endif %}
-
                 <div class="col-sm-12" id="pdfContainer">
-                    <div id="pdfViewer"></div>
+                   <div id="pdfViewer"></div>
                 </div>
-                
             </div>
         </div>
-       
-        
         <!-- Footer Start -->
         <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
             <div class="container py-5">
@@ -256,15 +254,16 @@
                     console.error('Error:', error);
                 });
             }
-        
             function loadPDF(url) {
                 var pdfContainer = document.getElementById('pdfContainer');
                 var pdfViewer = document.getElementById('pdfViewer');
-                var favoriteBooksContainer = document.querySelector('.list-group');
+                var favoriteBooks = document.querySelector('.col-lg-3 ');
                 pdfViewer.innerHTML = ''; // Clear previous PDF pages
     
                 pdfContainer.style.display = 'block';
-                favoriteBooksContainer.style.display = 'none';
+                favoriteBooks.style.display = 'none';
+    
+               
     
                 // Load the PDF using pdf.js
                 pdfjsLib.getDocument(url).promise.then(function(pdf) {
@@ -297,7 +296,6 @@
                     page.render(renderContext);
                 });
             }
-            
         </script> 
 
         
